# LRCGen

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: README.md  api-reference.md  changelog.md  configuration.md  getting-started.md  installation.md  usage.md
lrcgen/: __init__.py  __main__.py  cli.py  lrc_writer.py  lyrics_search.py  metadata.py  whisper_sync.py
tests/: conftest.py  test_cli.py  test_integration.py  test_lrc_writer.py  test_lyrics_search.py  test_metadata.py  test_whisper_sync.py
